updated section id for search

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <div class="hero"></div>
     <main class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Placeholder image with text 300 width and 200 height" />
             <h2>Search Engine Optimization</h2>
             <p>
